--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -1,6 +1,14 @@
 <h2>Create New Landmark</h2>
 
-<!-- add content here -->
+<form action="/landmarks" method="POST">
+    <label>Name</label><br>
+        <input type="text" id="landmark_name" name="landmark[name]"><br>
+    <label>Year Completed</label><br>
+        <input type="text" id="landmark_year_completed" name="landmark[year_completed]"><br>
+
+
 
 <a class="button" href="/landmarks">Landmarks</a>
 <a class="button" href="/">Home</a>
+    <input type="submit" value="Create New Landmark">
+</form>
